--- a/JPA/jpa/src/main/resources/application.properties
+++ b/JPA/jpa/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=jpa
+spring.application.name=sist-vendas
+spring.sql.init.data-locations=classpath*:bd/insert.sql
+spring.jpa.hibernate.ddl-auto=create
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
